--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "web",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Hello World",
+  "main": "23127092.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node 23127092.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "express": "^5.1.0"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
